--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
+      - cd ChuckSwapCAssessment
       - dotnet restore
       - dotnet test
       - dotnet publish -c Release -r linux-x64 --self-contained true
