--- a/appspec.yml
+++ b/appspec.yml
@@ -4,14 +4,14 @@ files:
     - source:/
       destination:/var/www/htm/lit-test
 hooks:
-  BeforeInstall:
-    - location: scripts/install_dependencies
-      timeout: 300
-      runas: root
-  AfterInstall:
-    - location: scripts/after_install
-      timeout: 300
-      runas: root
+  #BeforeInstall:
+   # - location: scripts/install_dependencies
+   #   timeout: 300
+   #   runas: root
+  #AfterInstall:
+  #  - location: scripts/after_install
+  #    timeout: 300
+   #   runas: root
   ApplicationStart:
     - location: scripts/start_server
       timeout: 300
