--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,11 +3,15 @@ version: 0.2
 phases:
   build:
     commands:
+      - cd ChuckSwapCAssessment
       - dotnet restore
       - dotnet test
       - dotnet publish -c Release -r linux-x64 --self-contained true
 
 artifacts:
   files:
-    - '**/*'
+    - .\ChuckSwapCAssessment\bin\Release\netcoreapp3.1\**\*
+    - .\ChuckSwapCAssessment\bin\Release\netcoreapp3.1\*
+    - .\scripts\*
+    - appspec.yml
   ##base-directory: ./src/output
