--- a/appspec.yml
+++ b/appspec.yml
@@ -15,8 +15,8 @@ hooks:
   ApplicationStart:
     - location: scripts/start_server.ps1
       timeout: 300
-      runas: root
+      runas: ssm-user
   ApplicationStop:
     - location: scripts/stop_server.ps1
       timeout: 300
-      runas: root
+      runas: ssm-user
