--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,14 +6,15 @@ phases:
     #  - cd ChuckSwapCAssessment
       - dotnet restore
       - dotnet test
-      - dotnet publish -c Release -r linux-x64 --self-contained true
+      - dotnet publish -c release -o ./build_output ChuckSwapCAssessment/ChuckSwapiCAssessment.API.csproj -r linux-x64 --self-contained true
 
 artifacts:
   files:
-    - .\ChuckSwapCAssessment\bin\Release\netcoreapp3.1\linux-x64\*
+    - ChuckSwapCAssessment/build_output/**/*
     ##- .\ChuckSwapCAssessment\bin\Release\netcoreapp3.1\*
-    ##- .\scripts\*
-    - .\scripts\start_server.ps1
-    - .\scripts\stop_server.ps1
+    ##- AspNetCoreWebService/build_output/**/*
+    - scripts/**/*
+    ##- .\scripts\start_server.ps1
+    ##- .\scripts\stop_server.ps1
     - appspec.yml
   ##base-directory: ./src/output
