--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
     - source: /
-      destination: /var/www/lit-test
+      destination: /var/www/html/lit-test
 hooks:
   #BeforeInstall:
    # - location: scripts/install_dependencies
@@ -12,11 +12,11 @@ hooks:
   #  - location: scripts/after_install
   #    timeout: 300
    #   runas: root
-  #ApplicationStart:
-   # - location: scripts/start_server.ps1
-   #   timeout: 300
-    #  runas: ssm-user
-  #ApplicationStop:
-  #  - location: scripts/stop_server.ps1
-  #    timeout: 300
-  #    runas: ssm-user
+  ApplicationStart:
+    - location: scripts/start_server.ps1
+      timeout: 300
+      runas: ssm-user
+  ApplicationStop:
+    - location: scripts/stop_server.ps1
+      timeout: 300
+      runas: ssm-user
